<resources>
    <string name="app_name">Agroom</string>

    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="Register">Don\'t Have an account?Sign up now</string>
    <string name="Preferences_file_name">Users Preferences</string>

    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="name_min_3_characters">Name (Min 3 characters)</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min 4 characters)</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="register1">Register</string>
</resources>
