<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A0CF8F">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/agroom"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="40dp"/>
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInfo"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:padding="6dp"
            android:hint="@string/mobile_number_10_digits"/>

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/email_address"/>


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmailAddress"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#509637"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_mobile_number_and_email_below"
            android:layout_below="@id/imgLogo"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:padding="6dp"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

    </RelativeLayout>
</LinearLayout>